# AAL

./: AAL.sln  CMakeLists.txt
AAL/: AAL.vcxproj  AAL.vcxproj.filters  Algorithms.h  BSP.cpp  BSP.h  Collection.hpp  FileIO.h  Line2D.cpp  Line2D.h  Point2D.cpp  Point2D.h  Polygon.h  Prism.cpp  PrismGenerator.cpp  PrismGenerator.h  ShuterlandHodgman.cpp  UserInterface.cpp  UserInterface.h  Vatti.cpp  Vatti.h  VattiEdge.cpp  VattiEdge.h  WeilerAtherton.h  main.cpp  rademe.txt
AAL/headers/: Collection.hpp  EdgeEndpoint.h  Executor.h  Line2D.h  Point2D.h  Polygon.h  Prism.h  PrismGenerator.h  ShuterlandHodgman.h  SweepMethod.h  TempBuffer.h  Timer.h  UserInterface.h  Vector2D.h  WeilerAtherton.h
AAL/sources/: Algorithms.cpp  EdgeEndpoint.cpp  Executor.cpp  FileIO.cpp  Line2D.cpp  Point2D.cpp  Polygon.cpp  Prism.cpp  PrismGenerator.cpp  ShuterlandHodgman.cpp  SweepMethod.cpp  TempBuffer.cpp  UserInterface.cpp  Vector2D.cpp  WeilerAtherton.cpp  main.cpp
AAL_TESTS/: executorTest.cpp  generatorTest.cpp  simplePointTest.cpp  simpleTest.cpp  sweepTest.cpp  weilerAthertonTest.cpp
